deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finops
  labels:
    name: finops
